# overwatch

./: .gitignore  AGENT-STATE-TEMPLATE.md  BOOTSTRAP-RESULT.md  CLAUDE.md  NOTICE.md  OPENSHIFT_DEBUG.md  README.md  RECOVERY_STATUS.md  agent-roles.md  check-strength.yaml  install-config.yaml
architecture-vault/: .gitignore  INDEX.md
docs/: autonomous-operations-architecture.md  compliance.md  index.md  infrastructure-audit.md  installation.md  networking.md  okd-cluster-status.md  storage.md  workload-management.md
infrastructure/: inventory.ini  main.tf  provider.tf  variables.tf
overwatch-gen/: README.md  __init__.py  conftest.py  main.py  pyproject.toml  requirements.txt
overwatch-gen/collectors/: __init__.py  l1_proxmox.py  l1_unifi.py  l2_vlans.py  l3_netbox.py  l3_unifi_firewall.py  l4_kyverno.py  l4_netpol.py  l4_ufw.py  l5_istio_authz.py  l5_istio_peerauth.py  l5_keycloak.py  l6_certmanager.py  l6_vault_pki.py  l7_istio.py  l7_okd_routes.py  l7_traefik.py
overwatch-gen/fixtures/: __init__.py  authzpolicy_sample.json  certmanager_sample.json  keycloak_clients_sample.json  kyverno_sample.json  netbox_prefixes_sample.json  netpol_sample.json  okd_routes_sample.json  peerauth_sample.json  pki_certs_sample.json  proxmox_sample.json  traefik_routes_sample.json  ufw_sample.json  unifi_devices_sample.json  unifi_firewall_sample.json  unifi_networks_sample.json  virtualservice_sample.json
overwatch-gen/lib/: __init__.py  canvas.py  determinism.py  registry.py  render.py  vault_client.py
overwatch-gen/renderers/: __init__.py  l1_renderer.py  l2_renderer.py  l3_renderer.py  l4_renderer.py  l5_renderer.py  l6_renderer.py  l7_renderer.py
overwatch-gen/templates/: l1.d2.j2  l1_physical.md.j2  l2.d2.j2  l2_datalink.md.j2  l3.d2.j2  l3_network.md.j2  l4.d2.j2  l4_transport.md.j2  l5.d2.j2  l5_session.md.j2  l6.d2.j2  l6_presentation.md.j2  l7.d2.j2  l7_application.md.j2
overwatch-gen/tests/: __init__.py  test_determinism.py  test_l1.py  test_l2.py  test_l3.py  test_l4.py  test_l5.py  test_l6.py  test_l7.py  test_registry.py
runbooks/: README.md  (+8 more)
(+58 files in other folders)
